--- a/src/files/nodes.conf
+++ b/src/files/nodes.conf
@@ -1,11 +1,15 @@
 # nodes.conf: CORE node templates customization file.
 # format: index {name normal-icon tiny-icon services type metadata}
-1 { router router.gif router.gif {zebra OSPFv2 OSPFv3 vtysh IPForward}  netns {built-in type for routing} }
-2 { host host.gif host.gif {DefaultRoute SSH}  netns {built-in type for servers} }
-3 { PC pc.gif pc.gif {DefaultRoute}  netns {built-in type for end hosts} }
-4 { mdr mdr.gif mdr.gif {zebra OSPFv3MDR vtysh IPForward}  netns {built-in type for wireless routers} }
-5 { prouter router_green.gif router_green.gif  {zebra OSPFv2 OSPFv3 vtysh IPForward}  physical {built-in type for physical nodes} }
-6 { xen xen.gif xen.gif {zebra OSPFv2 OSPFv3 vtysh IPForward}  xen {built-in type for Xen PVM domU router} }
-7 { as_node router.gif router.gif {zebra MOSPFv2 OSPFv3 vtysh IPForward}  netns {built-in type for routing} }
-8 { igp_node router.gif router.gif {zebra MOSPFv2 OSPFv3 vtysh IPForward}  netns {built-in type for routing} }
-9 { egp_node router.gif router.gif {zebra MOSPFv2 OSPFv3 MBGP vtysh IPForward}  netns {built-in type for routing} }
+1 {  router router.gif router.gif {zebra OSPFv2 OSPFv3 vtysh IPForward}  netns {built-in type for routing}  }
+2 {  host host.gif host.gif {DefaultRoute SSH}  netns {built-in type for servers}  }
+3 {  PC pc.gif pc.gif {DefaultRoute}  netns {built-in type for end hosts}  }
+4 {  mdr mdr.gif mdr.gif {zebra OSPFv3MDR vtysh IPForward}  netns {built-in type for wireless routers}  }
+5 {  prouter router_green.gif router_green.gif  {zebra OSPFv2 OSPFv3 vtysh IPForward}  physical {built-in type for physical nodes}  }
+6 {  xen xen.gif xen.gif {zebra OSPFv2 OSPFv3 vtysh IPForward}  xen {built-in type for Xen PVM domU router}  }
+7 {   as_node router_yellow.gif router_yellow.gif {zebra ISIS OSPFv3 vtysh IPForward}  netns {built-in type for routing}   }
+8 {   igp_node router.gif router.gif {zebra ISIS MOSPFv2 vtysh IPForward} netns {built-in type for routing}   }
+9 {   egp_node router_red.gif router_red.gif {zebra ISIS MOSPFv2 MBGP netflow9probe vtysh IPForward}  netns {built-in type for routing}   }
+10 {  netflow9collector router_black.gif router_black.gif {netflow9sink} netns {}  }
+12 {  server host.gif host.gif {DefaultRoute}  netns {built-in type for servers}  }
+13 {  client pc.gif pc.gif {DefaultRoute}  netns {built-in type for end hosts}  }
+14 {  isis-router router.gif router.gif {zebra vtysh IPForward SSH ISIS} netns {Router mit isisd deamon}  }
