--- a/src/daemon/core/constants.py.in
+++ b/src/daemon/core/constants.py.in
@@ -17,7 +17,9 @@ VIMAGE_BIN              = "@vimage_path@/vimage"
 QUAGGA_STATE_DIR        = "@CORE_STATE_DIR@/run/quagga"
 MOUNT_BIN               = "@mount_path@/mount"
 UMOUNT_BIN              = "@umount_path@/umount"
-
+# TODO: make UNIONFS_BIN dynamic
+#UNIONFS_BIN             = "@unionfs_path@/unionfs-fuse"
+UNIONFS_BIN             = "/usr/bin/unionfs-fuse"
 
 config_files = ['ipaddrs.conf']
 
