--- a/src/files/nodes.conf
+++ b/src/files/nodes.conf
@@ -6,9 +6,13 @@
 4 { mdr mdr.gif mdr.gif {LoopbackAddress zebra OSPFv3MDR vtysh IPForward}  netns {built-in type for wireless routers} }
 5 { prouter router_green.gif router_green.gif  {LoopbackAddress zebra OSPFv2 OSPFv3 vtysh IPForward}  physical {built-in type for physical nodes} }
 6 { xen xen.gif xen.gif {LoopbackAddress zebra OSPFv2 OSPFv3 vtysh IPForward}  xen {built-in type for Xen PVM domU router} }
-7 { igp_node router.gif router.gif {Router LoopbackAddress IGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
-8 { igp_ospf_node router.gif router.gif {Router LoopbackAddress IGP zebra OSPFv2 BGP vtysh IPForward} netns {built-in type for routing} }
-9 { egp_ospf_node router_red.gif router_red.gif {Router LoopbackAddress EGP zebra OSPFv2 BGP netflow9probe vtysh IPForward} netns {built-in type for routing} }
-10 { egp_node router_red.gif router_red.gif {Router LoopbackAddress EGP zebra ISIS BGP netflow9probe vtysh IPForward} netns {built-in type for routing} }
-12 { server host.gif host.gif {LoopbackAddress DefaultRoute} netns {built-in type for servers} }
-13 { client pc.gif pc.gif {LoopbackAddress DefaultRoute} netns {built-in type for end hosts} }
+7 { igp_node router.gif router.gif {Router LoopbackAddress DNSResolvconf IGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
+8 { igp_ospf_node router.gif router.gif {Router LoopbackAddress DNSResolvconf IGP zebra OSPFv2 BGP vtysh IPForward} netns {built-in type for routing} }
+9 { egp_ospf_node router_red.gif router_red.gif {Router LoopbackAddress DNSResolvconf EGP zebra OSPFv2 BGP netflow9probe vtysh IPForward} netns {built-in type for routing} }
+10 { egp_node router_red.gif router_red.gif {Router LoopbackAddress DNSResolvconf EGP zebra ISIS BGP netflow9probe vtysh IPForward} netns {built-in type for routing} }
+11 { EIBGP_Node router_red.gif router_red.gif {IPForward SSH netflow9probe DNSResolvconf LoopbackAddress IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {External IBGP Route Reflector} }
+12 { server host.gif host.gif {LoopbackAddress DNSResolvconf DefaultRoute} netns {built-in type for servers} }
+13 { client pc.gif pc.gif {LoopbackAddress DNSResolvconf DefaultRoute} netns {built-in type for end hosts} }
+14 { dnsserver host.gif host.gif {LoopbackAddress DNSResolvconf DNSMasq DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
+15 { as_auth_dnsserver host.gif host.gif {LoopbackAddress DNSResolvconf Bind9 DNSResolver DNSASRootServer DefaultRoute} netns {authoritative (AS wide) DNS server for name resolution} }
+16 { dnsrootserver host.gif host.gif {LoopbackAddress DNSResolvconf Bind9 DNSResolver DNSRootServer DefaultRoute} netns {Root DNS server for name resolution} }
