[files/nodes.conf] added node-type dns_forwarder
Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/src/files/nodes.conf
+++ b/src/files/nodes.conf
@@ -13,6 +13,7 @@
 11 { EIBGP_Node router_red.gif router_red.gif {IPForward SSH netflow9probe DNSResolvconf LoopbackAddress IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {External IBGP Route Reflector} }
 12 { server host.gif host.gif {LoopbackAddress DNSResolvconf DefaultRoute} netns {built-in type for servers} }
 13 { client pc.gif pc.gif {LoopbackAddress DNSResolvconf DefaultRoute} netns {built-in type for end hosts} }
-14 { dnsserver host.gif host.gif {LoopbackAddress DNSResolvconf DNSMasq DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
-15 { as_auth_dnsserver host.gif host.gif {LoopbackAddress DNSResolvconf Bind9 DNSResolver DNSASRootServer DefaultRoute} netns {authoritative (AS wide) DNS server for name resolution} }
-16 { dnsrootserver host.gif host.gif {LoopbackAddress DNSResolvconf Bind9 DNSResolver DNSRootServer DefaultRoute} netns {Root DNS server for name resolution} }
+14 { dns_forwarder host.gif host.gif {LoopbackAddress DNSResolvconf Bind9  DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
+15 { dnsserver host.gif host.gif {LoopbackAddress DNSResolvconf Bind9 DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
+16 { as_auth_dnsserver host.gif host.gif {LoopbackAddress DNSResolvconf Bind9 DNSResolver DNSASRootServer DefaultRoute} netns {authoritative (AS wide) DNS server for name resolution} }
+17 { dnsrootserver host.gif host.gif {LoopbackAddress DNSResolvconf Bind9 DNSResolver DNSRootServer DefaultRoute} netns {Root DNS server for name resolution} }
