[gitignore] adapted to include autogenerated files
Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 Makefile
+Makefile.in
+aclocal.m4
+conf.py
+config
+src/gui/core-gui
+src/gui/version.tcl
+constants.py
+daemon/core/constants.py
 stamp*
 *.jpg
 *.install
