[data/core.conf] added definition of a clientlogfile
Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/src/daemon/data/core.conf
+++ b/src/daemon/data/core.conf
@@ -10,6 +10,8 @@
 [core-daemon]
 pidfile = /var/run/core-daemon.pid
 logfile = /var/log/core-daemon.log
+clientlogfile = /tmp/core-client.log
+
 # you may want to change the listenaddr below to 0.0.0.0
 listenaddr = localhost
 port = 4038
