[files/ipaddrs.conf] explicitly configure IPv4 and IPv6 (loopback) addresses
Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/src/files/ipaddrs.conf
+++ b/src/files/ipaddrs.conf
@@ -1,2 +1,4 @@
-loopback_net = "172.16.0.0/16"
-loopback_net_per_netid = 19
+ipv4_loopback_net = "172.16.0.0/16"
+ipv4_loopback_net_per_netid = 19
+ipv6_loopback_net = "feed:100b::/32"
+ipv6_loopback_net_per_netid = 48
