[files/ipaddr.conf] changed v6-loopback-space; added v4,v6-interface-space
Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/src/files/ipaddrs.conf
+++ b/src/files/ipaddrs.conf
@@ -1,4 +1,12 @@
 ipv4_loopback_net = "172.16.0.0/16"
 ipv4_loopback_net_per_netid = 19
-ipv6_loopback_net = "feed:100b::/32"
-ipv6_loopback_net_per_netid = 48
+ipv6_loopback_net = "FD10::/16"
+ipv6_loopback_net_per_netid = 32
+ipv4_interface_net = "10.0.0.0/8"
+ipv4_interface_net_per_netid = 16
+ipv4_interface_net_per_ptp_link = 30
+ipv4_interface_net_per_brdcst_link = 24
+ipv6_interface_net = FD1F::/16
+ipv6_interface_net_per_netid = 32
+ipv6_interface_net_per_ptp_link = 63
+ipv6_interface_net_per_brdcst_link = 56
