--- a/src/daemon/core/constants.py.in
+++ b/src/daemon/core/constants.py.in
@@ -33,7 +33,7 @@ class KeyValueConf():
     @staticmethod
     def parse(filename):
         localconfig = {}
-        with open(fullpath, 'r') as f:
+        with open(filename, 'r') as f:
             for line in f:
                 try:
                     key_value = line.split('=')
@@ -72,7 +72,7 @@ class NodesConf():
                 }
 
         nodedef = None
-        with open(fullpath, 'r') as f:
+        with open(filename, 'r') as f:
             for line in f:
                 try:
                     line = line.strip()
