--- a/src/files/brite.conf
+++ b/src/files/brite.conf
@@ -16,7 +16,7 @@ array set testing_prefs {
 	gui_brite_as_hs_is_disabled	"0"
 	gui_brite_as_ls		"100"
 	gui_brite_as_ls_is_disabled	"0"
-	gui_brite_as_m		"2"
+	gui_brite_as_m		"1.5"
 	gui_brite_as_m_is_disabled	"0"
 	gui_brite_as_maxBW	"1024.0"
 	gui_brite_as_maxBW_is_disabled	"1"
@@ -24,9 +24,9 @@ array set testing_prefs {
 	gui_brite_as_minBW_is_disabled	"1"
 	gui_brite_as_models	"BA"
 	gui_brite_as_models_is_disabled	"0"
-	gui_brite_as_n		"5"
+	gui_brite_as_n		"12"
 	gui_brite_as_n_is_disabled	"0"
-	gui_brite_as_nodeplacement	"Random"
+	gui_brite_as_nodeplacement	"Heavy Tailed"
 	gui_brite_as_nodeplacement_is_disabled	"0"
 	gui_brite_as_p		"0.6"
 	gui_brite_as_p_is_disabled	"1"
@@ -67,11 +67,11 @@ array set testing_prefs {
 	gui_brite_router_models_is_disabled	"0"
 	gui_brite_router_n	"15"
 	gui_brite_router_n_is_disabled	"0"
-	gui_brite_router_nodeplacement	"Random"
+	gui_brite_router_nodeplacement	"Heavy Tailed"
 	gui_brite_router_nodeplacement_is_disabled	"0"
 	gui_brite_router_p	"0.25"
 	gui_brite_router_p_is_disabled	"1"
-	gui_brite_router_prefconn	"None"
+	gui_brite_router_prefconn	"On"
 	gui_brite_router_prefconn_is_disabled	"0"
 	gui_brite_router_q	"0.5"
 	gui_brite_router_q_is_disabled	"1"
@@ -81,9 +81,9 @@ array set testing_prefs {
 	gui_brite_top_topotypes_is_disabled	"0"
 	gui_brite_topdown_ecm	"Random"
 	gui_brite_topdown_ecm_is_disabled	"0"
-	gui_brite_topdown_iabwd	"Constant"
+	gui_brite_topdown_iabwd	"Heavy Tailed"
 	gui_brite_topdown_iabwd_is_disabled	"0"
-	gui_brite_topdown_iebwd	"Constant"
+	gui_brite_topdown_iebwd	"Heavy Tailed"
 	gui_brite_topdown_iebwd_is_disabled	"0"
 	gui_brite_topdown_k	"-1"
 	gui_brite_topdown_k_is_disabled	"1"
