--- a/src/files/ipaddrs.conf
+++ b/src/files/ipaddrs.conf
@@ -1,12 +1,12 @@
-ipv4_loopback_net = "172.16.0.0/16"
-ipv4_loopback_net_per_netid = 19
-ipv6_loopback_net = "FE10::/16"
+ipv4_loopback_net = "172.16.0.0/12"
+ipv4_loopback_net_per_netid = 21
+ipv6_loopback_net = "fe10::/16"
 ipv6_loopback_net_per_netid = 32
 ipv4_interface_net = "10.0.0.0/8"
 ipv4_interface_net_per_netid = 16
 ipv4_interface_net_per_ptp_link = 30
 ipv4_interface_net_per_brdcst_link = 24
-ipv6_interface_net = FE1F::/16
+ipv6_interface_net = fe1f::/16
 ipv6_interface_net_per_netid = 32
-ipv6_interface_net_per_ptp_link = 63
+ipv6_interface_net_per_ptp_link = 64
 ipv6_interface_net_per_brdcst_link = 56
