[gitignore] added contrib-build-directories to be ignored
Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ config.*
 compile
 __pycache__
 *.swp
+contrib/BENOCS/ifindex/src/ifindex
+contrib/pmacct/pmacct-*/
+contrib/quagga/quagga-*/
+contrib/softflowd/
