[files/nodes.conf] added proper OSPFv{2,3} node-types
Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/src/files/nodes.conf
+++ b/src/files/nodes.conf
@@ -7,8 +7,8 @@
 5 { prouter router_green.gif router_green.gif  {zebra OSPFv2 OSPFv3 vtysh IPForward}  physical {built-in type for physical nodes} }
 6 { xen xen.gif xen.gif {zebra OSPFv2 OSPFv3 vtysh IPForward}  xen {built-in type for Xen PVM domU router} }
 7 { igp_node router.gif router.gif {Router DNSResolvconf IGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
-8 { igp_ospf_node router.gif router.gif {Router DNSResolvconf IGP zebra OSPFv2 BGP vtysh IPForward} netns {built-in type for routing} }
-9 { egp_ospf_node router_red.gif router_red.gif {Router DNSResolvconf EGP zebra OSPFv2 BGP netflow9probe vtysh IPForward} netns {built-in type for routing} }
+8 { igp_ospf_node router.gif router.gif {Router DNSResolvconf IGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
+9 { egp_ospf_node router_red.gif router_red.gif {Router DNSResolvconf EGP zebra OSPFv2 OSPFv3 BGP netflow9probe vtysh IPForward} netns {built-in type for routing} }
 10 { egp_node router_red.gif router_red.gif {Router DNSResolvconf EGP zebra ISIS BGP netflow9probe vtysh IPForward} netns {built-in type for routing} }
 11 { EIBGP_Node router_red.gif router_red.gif {IPForward SSH netflow9probe DNSResolvconf IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {External IBGP Route Reflector} }
 12 { server host.gif host.gif {StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for servers} }
