--- a/src/files/nodes.conf
+++ b/src/files/nodes.conf
@@ -11,9 +11,9 @@
 9 { egp_ospf_node router_red.gif router_red.gif {Router LoopbackAddress DNSResolvconf EGP zebra OSPFv2 BGP netflow9probe vtysh IPForward} netns {built-in type for routing} }
 10 { egp_node router_red.gif router_red.gif {Router LoopbackAddress DNSResolvconf EGP zebra ISIS BGP netflow9probe vtysh IPForward} netns {built-in type for routing} }
 11 { EIBGP_Node router_red.gif router_red.gif {IPForward SSH netflow9probe DNSResolvconf LoopbackAddress IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {External IBGP Route Reflector} }
-12 { server host.gif host.gif {LoopbackAddress DNSResolvconf DefaultRoute} netns {built-in type for servers} }
-13 { client pc.gif pc.gif {LoopbackAddress DNSResolvconf DefaultRoute} netns {built-in type for end hosts} }
-14 { dns_forwarder host.gif host.gif {LoopbackAddress DNSResolvconf Bind9  DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
-15 { dnsserver host.gif host.gif {LoopbackAddress DNSResolvconf Bind9 DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
-16 { as_auth_dnsserver host.gif host.gif {LoopbackAddress DNSResolvconf Bind9 DNSResolver DNSASRootServer DefaultRoute} netns {authoritative (AS wide) DNS server for name resolution} }
-17 { dnsrootserver host.gif host.gif {LoopbackAddress DNSResolvconf Bind9 DNSResolver DNSRootServer DefaultRoute} netns {Root DNS server for name resolution} }
+12 { server host.gif host.gif {LoopbackAddress StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for servers} }
+13 { client pc.gif pc.gif {LoopbackAddress StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for end hosts} }
+14 { dns_forwarder host.gif host.gif {LoopbackAddress StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server  DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
+15 { dnsserver host.gif host.gif {LoopbackAddress StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
+16 { as_auth_dnsserver host.gif host.gif {LoopbackAddress StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DNSASRootServer DefaultRoute} netns {authoritative (AS wide) DNS server for name resolution} }
+17 { dnsrootserver host.gif host.gif {LoopbackAddress StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DNSRootServer DefaultRoute} netns {Root DNS server for name resolution} }
