--- a/src/files/nodes.conf
+++ b/src/files/nodes.conf
@@ -6,16 +6,16 @@
 4 { mdr mdr.gif mdr.gif {zebra OSPFv3MDR vtysh IPForward}  netns {built-in type for wireless routers} }
 5 { prouter router_green.gif router_green.gif  {zebra OSPFv2 OSPFv3 vtysh IPForward}  physical {built-in type for physical nodes} }
 6 { xen xen.gif xen.gif {zebra OSPFv2 OSPFv3 vtysh IPForward}  xen {built-in type for Xen PVM domU router} }
-7 { igp_node router.gif router.gif {Router DNSResolvconf IGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
-8 { egp_node router_red.gif router_red.gif {Router DNSResolvconf EGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
-9 { igp_rr_node router_red.gif router_red.gif {IPForward SSH DNSResolvconf IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {IBGP Route Reflector} }
-10 { EIBGP_Node router_red.gif router_red.gif {IPForward SSH DNSResolvconf IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {External IBGP Route Reflector} }
-11 { igp_ospf_node router.gif router.gif {Router DNSResolvconf IGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
-12 { egp_ospf_node router_red.gif router_red.gif {Router DNSResolvconf EGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
-13 { igp_rr_ospf_node router_red.gif router_red.gif {IPForward SSH DNSResolvconf IGP EGP Router zebra BGP OSPFv2 OSPFv3 vtysh Firewall} netns {IBGP Route Reflector} }
-14 { server host.gif host.gif {StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for servers} }
-15 { client pc.gif pc.gif {StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for end hosts} }
-16 { dns_forwarder host.gif host.gif {StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server  DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
-17 { dnsserver host.gif host.gif {StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
-18 { as_auth_dnsserver host.gif host.gif {StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DNSASRootServer DefaultRoute} netns {authoritative (AS wide) DNS server for name resolution} }
-19 { dnsrootserver host.gif host.gif {StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DNSRootServer DefaultRoute} netns {Root DNS server for name resolution} }
+7 { igp_node router.gif router.gif {Router Cron ICMPProbe DNSResolvconf IGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
+8 { egp_node router_red.gif router_red.gif {Router Cron ICMPProbe DNSResolvconf EGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
+9 { igp_rr_node router_red.gif router_red.gif {IPForward Cron ICMPProbe DNSResolvconf IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {IBGP Route Reflector} }
+10 { EIBGP_Node router_red.gif router_red.gif {IPForward Cron ICMPProbe DNSResolvconf IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {External IBGP Route Reflector} }
+11 { igp_ospf_node router.gif router.gif {Router Cron ICMPProbe DNSResolvconf IGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
+12 { egp_ospf_node router_red.gif router_red.gif {Router Cron ICMPProbe DNSResolvconf EGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
+13 { igp_rr_ospf_node router_red.gif router_red.gif {IPForward Cron ICMPProbe DNSResolvconf IGP EGP Router zebra BGP OSPFv2 OSPFv3 vtysh Firewall} netns {IBGP Route Reflector} }
+14 { server host.gif host.gif {StaticRouteToLoopback Cron ICMPProbe DNSResolvconf DefaultRoute} netns {built-in type for servers} }
+15 { client pc.gif pc.gif {StaticRouteToLoopback Cron ICMPProbe DNSResolvconf DefaultRoute} netns {built-in type for end hosts} }
+16 { dns_forwarder host.gif host.gif {StaticRouteToLoopback Cron ICMPProbe DNSResolvconf Bind9-forwarder_and_server  DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
+17 { dnsserver host.gif host.gif {StaticRouteToLoopback Cron ICMPProbe DNSResolvconf Bind9-forwarder_and_server DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
+18 { as_auth_dnsserver host.gif host.gif {StaticRouteToLoopback Cron ICMPProbe DNSResolvconf Bind9-forwarder_and_server DNSResolver DNSASRootServer DefaultRoute} netns {authoritative (AS wide) DNS server for name resolution} }
+19 { dnsrootserver host.gif host.gif {StaticRouteToLoopback Cron ICMPProbe DNSResolvconf Bind9-forwarder_and_server DNSResolver DNSRootServer DefaultRoute} netns {Root DNS server for name resolution} }
