--- a/src/files/nodes.conf
+++ b/src/files/nodes.conf
@@ -8,11 +8,11 @@
 6 { xen xen.gif xen.gif {zebra OSPFv2 OSPFv3 vtysh IPForward}  xen {built-in type for Xen PVM domU router} }
 7 { igp_node router.gif router.gif {Router DNSResolvconf IGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
 8 { egp_node router_red.gif router_red.gif {Router DNSResolvconf EGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
-9 { igp_rr_node router_red.gif router_red.gif {IPForward DNSResolvconf IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {IBGP Route Reflector} }
+9 { igp_rr_node router_red.gif router_red.gif {IPForward DNSResolvconf IGP Router zebra BGP ISIS vtysh Firewall} netns {IBGP Route Reflector} }
 10 { EIBGP_Node router_red.gif router_red.gif {IPForward DNSResolvconf IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {External IBGP Route Reflector} }
 11 { igp_ospf_node router.gif router.gif {Router DNSResolvconf IGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
 12 { egp_ospf_node router_red.gif router_red.gif {Router DNSResolvconf EGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
-13 { igp_rr_ospf_node router_red.gif router_red.gif {IPForward DNSResolvconf IGP EGP Router zebra BGP OSPFv2 OSPFv3 vtysh Firewall} netns {IBGP Route Reflector} }
+13 { igp_rr_ospf_node router_red.gif router_red.gif {IPForward DNSResolvconf IGP Router zebra BGP OSPFv2 OSPFv3 vtysh Firewall} netns {IBGP Route Reflector} }
 14 { server host.gif host.gif {StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for servers} }
 15 { client pc.gif pc.gif {StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for end hosts} }
 16 { dns_forwarder host.gif host.gif {StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server  DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
