[files/nodes.conf] added snmpd to all nodes
Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/src/files/nodes.conf
+++ b/src/files/nodes.conf
@@ -1,21 +1,21 @@
 # nodes.conf: CORE node templates customization file.
 # format: index {name normal-icon tiny-icon services type metadata}
-1 { router router.gif router.gif {Cron ICMPProbezebra OSPFv2 OSPFv3 vtysh IPForward}  netns {built-in type for routing} }
-2 { host host.gif host.gif {Cron ICMPProbeDefaultRoute SSH}  netns {built-in type for servers} }
-3 { PC pc.gif pc.gif {Cron ICMPProbeDefaultRoute}  netns {built-in type for end hosts} }
-4 { mdr mdr.gif mdr.gif {Cron ICMPProbezebra OSPFv3MDR vtysh IPForward}  netns {built-in type for wireless routers} }
-5 { prouter router_green.gif router_green.gif  {Cron ICMPProbezebra OSPFv2 OSPFv3 vtysh IPForward}  physical {built-in type for physical nodes} }
-6 { xen xen.gif xen.gif {Cron ICMPProbezebra OSPFv2 OSPFv3 vtysh IPForward}  xen {built-in type for Xen PVM domU router} }
-7 { igp_node router.gif router.gif {Cron ICMPProbeRouter DNSResolvconf IGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
-8 { egp_node router_red.gif router_red.gif {Cron ICMPProbeRouter DNSResolvconf EGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
-9 { igp_rr_node router_red.gif router_red.gif {Cron ICMPProbeIPForward DNSResolvconf IGP Router zebra BGP ISIS vtysh Firewall} netns {IBGP Route Reflector} }
-10 { EIBGP_Node router_red.gif router_red.gif {Cron ICMPProbeIPForward DNSResolvconf IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {External IBGP Route Reflector} }
-11 { igp_ospf_node router.gif router.gif {Cron ICMPProbeRouter DNSResolvconf IGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
-12 { egp_ospf_node router_red.gif router_red.gif {Cron ICMPProbeRouter DNSResolvconf EGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
-13 { igp_rr_ospf_node router_red.gif router_red.gif {Cron ICMPProbeIPForward DNSResolvconf IGP Router zebra BGP OSPFv2 OSPFv3 vtysh Firewall} netns {IBGP Route Reflector} }
-14 { server host.gif host.gif {Cron ICMPProbeStaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for servers} }
-15 { client pc.gif pc.gif {Cron ICMPProbeStaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for end hosts} }
-16 { dns_forwarder host.gif host.gif {Cron ICMPProbeStaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server  DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
-17 { dnsserver host.gif host.gif {Cron ICMPProbeStaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
-18 { as_auth_dnsserver host.gif host.gif {Cron ICMPProbeStaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DNSASRootServer DefaultRoute} netns {authoritative (AS wide) DNS server for name resolution} }
-19 { dnsrootserver host.gif host.gif {Cron ICMPProbeStaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DNSRootServer DefaultRoute} netns {Root DNS server for name resolution} }
+1 { router router.gif router.gif {snmpd Cron ICMPProbe zebra OSPFv2 OSPFv3 vtysh IPForward}  netns {built-in type for routing} }
+2 { host host.gif host.gif {snmpd Cron ICMPProbe DefaultRoute SSH}  netns {built-in type for servers} }
+3 { PC pc.gif pc.gif {snmpd Cron ICMPProbe DefaultRoute}  netns {built-in type for end hosts} }
+4 { mdr mdr.gif mdr.gif {snmpd Cron ICMPProbe zebra OSPFv3MDR vtysh IPForward}  netns {built-in type for wireless routers} }
+5 { prouter router_green.gif router_green.gif  {snmpd Cron ICMPProbe zebra OSPFv2 OSPFv3 vtysh IPForward}  physical {built-in type for physical nodes} }
+6 { xen xen.gif xen.gif {snmpd Cron ICMPProbe zebra OSPFv2 OSPFv3 vtysh IPForward}  xen {built-in type for Xen PVM domU router} }
+7 { igp_node router.gif router.gif {snmpd Cron ICMPProbe Router DNSResolvconf IGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
+8 { egp_node router_red.gif router_red.gif {snmpd Cron ICMPProbe Router DNSResolvconf EGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
+9 { igp_rr_node router_red.gif router_red.gif {snmpd Cron ICMPProbe IPForward DNSResolvconf IGP Router zebra BGP ISIS vtysh Firewall} netns {IBGP Route Reflector} }
+10 { EIBGP_Node router_red.gif router_red.gif {snmpd Cron ICMPProbe IPForward DNSResolvconf IGP EGP Router zebra BGP ISIS vtysh Firewall} netns {External IBGP Route Reflector} }
+11 { igp_ospf_node router.gif router.gif {snmpd Cron ICMPProbe Router DNSResolvconf IGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
+12 { egp_ospf_node router_red.gif router_red.gif {snmpd Cron ICMPProbe Router DNSResolvconf EGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
+13 { igp_rr_ospf_node router_red.gif router_red.gif {snmpd Cron ICMPProbe IPForward DNSResolvconf IGP Router zebra BGP OSPFv2 OSPFv3 vtysh Firewall} netns {IBGP Route Reflector} }
+14 { server host.gif host.gif {snmpd Cron ICMPProbe StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for servers} }
+15 { client pc.gif pc.gif {snmpd Cron ICMPProbe StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for end hosts} }
+16 { dns_forwarder host.gif host.gif {snmpd Cron ICMPProbe StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server  DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
+17 { dnsserver host.gif host.gif {snmpd Cron ICMPProbe StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
+18 { as_auth_dnsserver host.gif host.gif {snmpd Cron ICMPProbe StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DNSASRootServer DefaultRoute} netns {authoritative (AS wide) DNS server for name resolution} }
+19 { dnsrootserver host.gif host.gif {snmpd Cron ICMPProbe StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server DNSResolver DNSRootServer DefaultRoute} netns {Root DNS server for name resolution} }
