[INSTALL] build and install net-snmp-5.7.2.1 from sources
Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,5 @@ __pycache__
 contrib/BENOCS/ifindex/src/ifindex
 contrib/pmacct/pmacct-*/
 contrib/quagga/quagga-*/
+contrib/snmp/net-snmp-*/
 contrib/softflowd/
