Revert "makefile angepasst"
This reverts commit e6d401c37ea7e1581255cde2387cac39ae80c3c5.

--- a/src/gui/Makefile.in
+++ b/src/gui/Makefile.in
@@ -355,7 +355,7 @@ TCL_FILES = annotations.tcl api.tcl canvas.tcl cfgparse.tcl \
 		nodes.tcl services.tcl ns2imunes.tcl plugins.tcl \
 		tooltips.tcl topogen.tcl traffic.tcl util.tcl \
 		version.tcl widget.tcl wlan.tcl wlanscript.tcl \
-		exceptions.tcl brite.tcl briteDoStuff3.tcl
+		exceptions.tcl brite.tcl briteBuildTopo.tcl briteDoStuff3.tcl
 
 ADDONS_FILES = addons/ipsecservice.tcl
 CONFIG_FILES = configs/sample1.imn configs/sample1.scen \
