[GUI] include Internet generator in Makefile
Signed-off-by: J.Weber <jweber@benocs.com>

Acked-by: Robert Wuttke <robert@benocs.com>

--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -19,7 +19,7 @@ TCL_FILES	= annotations.tcl api.tcl canvas.tcl cfgparse.tcl \
 		nodes.tcl services.tcl ns2imunes.tcl plugins.tcl \
 		tooltips.tcl topogen.tcl traffic.tcl util.tcl \
 		version.tcl widget.tcl wlan.tcl wlanscript.tcl \
-		exceptions.tcl
+		exceptions.tcl topogen_internet.tcl
 
 ADDONS_FILES    = addons/ipsecservice.tcl
 
