--- a/src/configure.ac
+++ b/src/configure.ac
@@ -6,6 +6,15 @@
 #
 # author:  Jeff Ahrenholz <jeffrey.m.ahrenholz@boeing.com>
 #
+
+#
+# Copyright (c) 2014 Benocs GmbH
+#
+# author: Robert Wuttke <robert@benocs.com>
+#
+# See the LICENSE file included in this distribution.
+#
+
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
