--- a/src/files/nodes.conf
+++ b/src/files/nodes.conf
@@ -8,7 +8,7 @@
 6 { xen xen.gif xen.gif {snmpd Cron ICMPProbe zebra OSPFv2 OSPFv3 vtysh IPForward}  xen {built-in type for Xen PVM domU router} }
 7 { igp_node router.gif router.gif {snmpd Cron ICMPProbe Router DNSResolvconf IGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
 8 { egp_node router_red.gif router_red.gif {snmpd Cron ICMPProbe Router DNSResolvconf EGP zebra ISIS BGP vtysh IPForward} netns {built-in type for routing} }
-9 { igp_rr_node router_green.gif router_red.gif {snmpd Cron ICMPProbe IPForward DNSResolvconf IGP Router zebra BGP ISIS vtysh Firewall} netns {IBGP Route Reflector} }
+9 { igp_rr_node router_green.gif router_green.gif {snmpd Cron ICMPProbe IPForward DNSResolvconf IGP Router zebra BGP ISIS vtysh Firewall} netns {IBGP Route Reflector} }
 10 { igp_ospf_node router.gif router.gif {snmpd Cron ICMPProbe Router DNSResolvconf IGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
 11 { egp_ospf_node router_red.gif router_red.gif {snmpd Cron ICMPProbe Router DNSResolvconf EGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
 12 { igp_rr_ospf_node router_green.gif router_red.gif {snmpd Cron ICMPProbe IPForward DNSResolvconf IGP Router zebra BGP OSPFv2 OSPFv3 vtysh Firewall} netns {IBGP Route Reflector} }
