[files/nodes.conf] fixed preview image of igp_rr_ospf_node
Signed-off-by: Robert Wuttke <robert@benocs.com>

--- a/src/files/nodes.conf
+++ b/src/files/nodes.conf
@@ -11,7 +11,7 @@
 9 { igp_rr_node router_green.gif router_green.gif {snmpd IPForward DNSResolvconf IGP Router zebra BGP ISIS vtysh Firewall} netns {IBGP Route Reflector} }
 10 { igp_ospf_node router.gif router.gif {snmpd Router DNSResolvconf IGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
 11 { egp_ospf_node router_red.gif router_red.gif {snmpd Router DNSResolvconf EGP zebra OSPFv2 OSPFv3 BGP vtysh IPForward} netns {built-in type for routing} }
-12 { igp_rr_ospf_node router_green.gif router_red.gif {snmpd IPForward DNSResolvconf IGP Router zebra BGP OSPFv2 OSPFv3 vtysh Firewall} netns {IBGP Route Reflector} }
+12 { igp_rr_ospf_node router_green.gif router_green.gif {snmpd IPForward DNSResolvconf IGP Router zebra BGP OSPFv2 OSPFv3 vtysh Firewall} netns {IBGP Route Reflector} }
 13 { server host.gif host.gif {snmpd StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for servers} }
 14 { client pc.gif pc.gif {snmpd StaticRouteToLoopback DNSResolvconf DefaultRoute} netns {built-in type for end hosts} }
 15 { dns_forwarder host.gif host.gif {snmpd StaticRouteToLoopback DNSResolvconf Bind9-forwarder_and_server  DNSResolver DefaultRoute} netns {caching DNS forwarder for name resolution} }
